--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "js libraries for i2c devices with sourcekit atiic serial-to-i2c bridge",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive --exit test/"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/aguegu/atiic/issues"
   },
-  "homepage": "https://github.com/aguegu/atiic#readme"
+  "homepage": "https://github.com/aguegu/atiic#readme",
+  "devDependencies": {
+    "mocha": "^9.2.2"
+  },
+  "dependencies": {
+    "@serialport/bindings-cpp": "^10.7.0",
+    "lodash": "^4.17.21"
+  }
 }
