--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "mocha": "^9.2.2"
   },
   "dependencies": {
-    "@serialport/bindings-cpp": "^10.7.0",
     "lodash": "^4.17.21"
+  },
+  "peerDependencies": {
+    "@serialport/bindings-cpp": "^10.7.0"
   }
 }
