--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "js libraries for i2c devices with sourcekit atiic serial-to-i2c bridge",
   "main": "src/index.js",
   "scripts": {
+    "lint": "eslint --ext .js src --fix",
     "test": "mocha --recursive --exit test/"
   },
   "repository": {
@@ -21,6 +22,9 @@
   },
   "homepage": "https://github.com/aguegu/atiic#readme",
   "devDependencies": {
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "mocha": "^9.2.2"
   },
   "dependencies": {
