--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "./adapters/serialport_bindingscpp": "./src/adapters/serialport_bindingscpp.js"
   },
   "scripts": {
-    "lint": "eslint --ext .js src --fix",
-    "test": "mocha --recursive --exit test/"
+    "lint": "eslint --ext .js src test --fix",
+    "test": "npm run lint && NODE_ENV=testing mocha --recursive --exit test/",
+    "watch": "nodemon -w src -w test -w config -e js,cjs -x 'npm run test'"
   },
   "repository": {
     "type": "git",
@@ -26,10 +27,13 @@
   },
   "homepage": "https://github.com/aguegu/atiic#readme",
   "devDependencies": {
+    "chai": "^4.3.6",
+    "config": "^3.3.7",
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "mocha": "^9.2.2"
+    "mocha": "^9.2.2",
+    "nodemon": "^2.0.16"
   },
   "dependencies": {
     "lodash": "^4.17.21"
